--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans">
     <title>Football Stats</title>
 </head>
 <body>
+    <main>
+        <section class="hero">
+            &nbsp;
+            <div class="layer layerContainer">
+                <div class="logo">
+                    <p class="textLogo">Stats</p>
+                    <p class="textLogo">Stats</p>
+                    <p class="textLogo">Stats</p>
+                </div>
+                <div class ="linkContainer">
+                    <div>
+                        <h2>Welcome to Stats Stats Stats!</h2>
+                        <h2>Select from an option below or sign in to see your favourite teams</h2>
+                    </div>
+                    <div>
+                        <a href="./league.html" class="button"> League Stats</a> 
+                    </div>
+                    <div>
+                        <a href="./teams.html" class="button"> Team Stats</a>
+                    </div>
+                    <div>
+                        <a href="./signin.html" class="button"> Sign in</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script defer src="./src/scripts/index.js"></script>
 </body>
 </html>
