index.html: changed layout, leagues.js: change day

--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
             &nbsp;
             <div class="layer layerContainer">
                 <div class="logo">
-                    <p class="textLogo">Stats</p>
-                    <p class="textLogo">Stats</p>
-                    <p class="textLogo">Stats</p>
-                </div>
-                <div class ="linkContainer">
+                    <p class="textLogo">Stats, Stats , Stats!</p>
                     <div>
-                        <h2>Welcome to Stats Stats Stats!</h2>
+                        <h2>Welcome to Stats, Stats, Stats!</h2>
                         <h2>Select from an option below or sign in to see your favourite teams</h2>
                     </div>
+                </div>
+                <div class ="linkContainer">
                     <div>
                         <a href="./league.html" class="button"> League Stats</a> 
                     </div>
