--- a/teams.html
+++ b/teams.html
@@ -48,6 +48,6 @@
         </ul>
     </footer>
     <script src="./src/scripts/index.js"></script>
-    <script defer src="./src/scripts/teams.js"></script>
+    <script defer src="./src/scripts/teams2.js"></script>
 </body>
 </html>
