status as presented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p class="textLogo">Stats, Stats , Stats!</p>
                     <div>
                         <h2>Welcome to Stats, Stats, Stats!</h2>
-                        <h2>Select from an option below or sign in to see your favourite teams</h2>
+                        <h2>Select from an option on the right or sign in to see your favourite teams</h2>
                     </div>
                 </div>
                 <div class ="linkContainer">
