--- a/league.html
+++ b/league.html
@@ -77,13 +77,13 @@
     <footer>
         <ul class = "listContainer">
             <li>
-                <p>Home</p>
+                <p>Bravin Thillainathan</p>
             </li>
             <li>
-                <p>Premier League</p>
+                <p></p>
             </li>
             <li>
-                <p>Champions League</p>
+                <a href="https://www.football-data.org">API</a>
             </li>
             <li>
                 <a href="#top">Top of Page</a>
